--- a/index.html
+++ b/index.html
@@ -13113,22 +13113,12 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#===================================================================================#</span>
-<span class="c1"># Implement an Iris Recognition Algorithm from Scratch for Biometric Identification #</span>
-<span class="c1">#                                                                                   #</span>
-<span class="c1">#                                                                   ---- by Kun Tao #   </span>
-<span class="c1">#===================================================================================#</span>
-</pre></div>
-
-    </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Implement-an-Iris-Recognition-Algorithm-from-Scratch-for-Biometric-Identification">Implement an Iris Recognition Algorithm from Scratch for Biometric Identification<a class="anchor-link" href="#Implement-an-Iris-Recognition-Algorithm-from-Scratch-for-Biometric-Identification">&#182;</a></h2><h3 id="Kun-Tao"><em>Kun Tao</em><a class="anchor-link" href="#Kun-Tao">&#182;</a></h3>
 </div>
 </div>
-
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
